still reworking the total

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       </thead>
 
       <tbody id="employeeData">
-        <tr style="display: none">
+        <tr>
           <td>Nicole</td>
           <td>Barnhouse</td>
           <td>44567</td>
@@ -50,7 +50,8 @@
   </main>
 
   <footer>
-    <p>Total Monthly:<span id="total_monthly">$5,000</span></p>
+    <p>Total Monthly: <span id="total_monthly"></span>
+    </p>
   </footer>
 
 </body>
