added code for color change overbudget

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
           <td>Barnhouse</td>
           <td>44567</td>
           <td>Project Manager</td>
-          <td>$72,000</td>
+          <td>$72000</td>
           <td><button onclick="this.closest('tr').remove()">Delete</button></td>
         </tr>
       </tbody> 
@@ -50,7 +50,7 @@
   </main>
 
   <footer>
-    <p>Total Monthly: <span id="total_monthly"></span>
+    <p>Total Monthly: $ <span id="TotalMonthly">6000</span>
     </p>
   </footer>
 
